--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -21,10 +21,10 @@
             <p>Epicode - Il blog dei developers</p>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html" title="Home Page">Home</a></li>
-                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
-                <li><a href="contatti.html" title="Candidati inviando un tuo cv">Job</a></li>
+            <ul class="primiLi">
+                <li class="primili"><a href="index.html" title="Home Page">Home</a></li>
+                <li class="primili"><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
+                <li class="primili"><a href="contatti.html" title="Candidati inviando un tuo cv">Job</a></li>
             </ul>
         </nav>
 
@@ -37,6 +37,9 @@
             <h1>Come creare un template per i post</h1>
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
+                   
+                        <img class="logo" src="./assets/img/badge.png" alt="logoEpicode" srcset="">
+                    
 
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti
                     comuni</strong> da applicare a tutte le pagine</p>
